@@ -8,15 +8,20 @@
 getAcop(family, check=TRUE)
 }
 \arguments{
-  \item{family}{character string: short or longer form of copula family
-    name.}
+  \item{family}{either a \code{\link{character}} string, the short or longer form
+    of the Archimedean family name (e.g., "Clayton" or simply "C"), see
+    the \code{\link{acopula-families}} documentation,
+    \cr
+    or an \code{\linkS4class{acopula}} family object.}
   \item{check}{logical indicating if the class of the return value
     should be checked to be \code{"\linkS4class{acopula}"}.}
 }
 \usage{
 getAcop(family, check = TRUE)
 }
-\value{one of our \code{"\linkS4class{acopula}"} objects}
+\value{an \code{"\linkS4class{acopula}"} family object, typically one of
+  one of our predefined ones.
+}
 \author{Martin Maechler}
 \seealso{
   Our predefined \code{\link{acopula-families}};
@@ -25,7 +30,7 @@ getAcop(family, check = TRUE)
 \examples{
 getAcop("Gumbel")
 
-stopifnot(identical(getAcop("J"),
-                    getAcop("Joe")))
+stopifnot(identical(getAcop("J"), getAcop("Joe")),
+          identical(getAcop("J"), copJoe))
 }
 \keyword{manip}
